# keaki

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  coverage.yml
ptau/: ppot_0080_01.ptau.test
src/: enc.rs  kem.rs  kzg.rs  lib.rs  operations.rs  pol_op.rs  vec.rs  we.rs
src/kzg/: ptau.rs  setup.rs
tests/: fow.rs  laconic_ot.rs
