[package]
name = "keaki"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { version = "1.5.4", default-features = false } 
thiserror = { version = "1.0.64" } 

# Arkworks
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
